# TorchLeet

./: .gitignore  .spaced-repetition.json  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: newproblem.md
llm/01-RMS-Norm/: rms-norm-Question.ipynb  rms-norm.ipynb
llm/02-Sinusoidal-Positional-Embedding/: sinusoidal-q7.ipynb
llm/03-Implement-Attention-from-Scratch/: attention-q4-Question.ipynb
llm/04-Multi-Head-Attention/: multi-head-attention-q5-Question.ipynb  multi-head-attention-q5.ipynb
llm/05-Byte-Pair-Encoder/: BPE-q3-Question.ipynb
llm/07-Grouped-Query-Attention/: grouped-query-attention-Question.ipynb
llm/08-KV-Cache/: kv-cache-Question.ipynb  kv-cache.ipynb
llm/09-KL-Divergence-Loss/: kl-divergence-Question.ipynb  kl-divergence.ipynb
llm/10-Create-Embeddings-out-of-an-LLM/: embeddings-q2.ipynb
llm/11-Temperature-Sampling/: temperature-sampling-Question.ipynb  temperature-sampling.ipynb
llm/12-Top-K-Top-P-Sampling/: sampling-Question.ipynb
llm/13-Beam-Search/: beam-search-Question.ipynb  beam-search.ipynb
llm/14-LoRA/: lora-Question.ipynb  lora.ipynb
llm/17-Quantization/: quantization-Question.ipynb  quantization.ipynb
llm/18-VLM-Attention/: vlm-attention-Question.ipynb  vlm-attention.ipynb
llm/19-MiniMax-Sparse-Attention/: sparse-attention-Question.ipynb
numerai/: headlines_data.json
numerai/01-FinBERT-Sentiment-Pipeline/: finbert-sentiment-Question.ipynb  finbert-sentiment.ipynb
papers/doc-to-lora/: doc-to-lora-2-Question.ipynb  (+1 more)
rlhf/: PLAN.md
valsai_interview/: interview.py
(+59 files in other folders)
