[project]
name = "torchleet"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "huggingface-hub>=1.3.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nbconvert>=7.16.6",
    "nnsight>=0.5.15",
    "nnterp>=1.2.2",
    "numpy>=2.4.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
